@@ -1,8 +1,13 @@
 0.7.4
+Done move to tab:line:col in remote control.
+Done printfile in remote control.
+Done togglebookmark in remote control.
+Done insertnl in remote control.
+Done inserttext in remote control.
 Added cut, copy and paste to remote control.
 Fixed hang if no data to send.
-Done send cursor position to remote control ( tabnumber:line:column ).
-Done send selected text to remote control.
+Done send cursor position in remote control ( tabnumber:line:column ).
+Done send selected text in remote control.
 Added save current session to remote control.
 Added send current session name to remote control.
 Added session name to info passed to external tools.
